[workspace]
members  = ["crates/tankyu-core", "crates/tankyu-cli"]
resolver = "2"

[workspace.package]
edition  = "2021"
license  = "MIT"
authors  = ["Christopher Bays <cmbays@protonmail.com>"]

[workspace.dependencies]
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1",   features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
thiserror          = "2"
anyhow             = "1"
tokio              = { version = "1",   features = ["full"] }
async-trait        = "0.1"
clap               = { version = "4",   features = ["derive", "env", "string"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs               = "5"
comfy-table        = "7"
insta              = "1"
proptest           = "1"
assert_cmd         = "2"
tempfile           = "3"
cucumber           = { version = "0.22", features = ["macros"] }
nanograph          = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.perf]
inherits = "release"
lto      = "thin"
debug    = 1
