[package]
name    = "tankyu-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio              = { workspace = true }
async-trait        = { workspace = true }
tracing            = { workspace = true }
dirs               = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
tempfile  = { workspace = true }
